--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: url('src\\assets\\backgrounds\\bg1.jpg') no-repeat center center fixed;
+  background: url('https://cdn.944986.xyz/zhizun62/images1/main/test/20250612_rVld5fKG.webp') no-repeat center center fixed;
   background-size: cover;
   background-attachment: fixed;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
